--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1"
-  }
+  },
+  "typecheck": "tsc --noEmit"
 }
