--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Kittipat Songchu",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.15.9",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
@@ -28,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4",
     "vite": "^3.1.4"
