--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "vite-plugin-live-reload": "^3.0.2"
   },
   "typecheck": "tsc --noEmit"
 }
